WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205261
http/wpt/service-workers/postMessage-fetch-order.https.html is a flaky failure after
r253528
https://bugs.webkit.org/show_bug.cgi?id=205261
Summary
http/wpt/service-workers/postMessage-fetch-order.https.html is a flaky failur...
youenn fablet
Reported
2019-12-16 02:53:46 PST
http/wpt/service-workers/postMessage-fetch-order.https.html is a flaky failure after
r253528
Attachments
Patch
(10.01 KB, patch)
2019-12-16 03:08 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(12.73 KB, patch)
2019-12-16 05:25 PST
,
youenn fablet
cdumez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-12-16 03:08:57 PST
Created
attachment 385747
[details]
Patch
youenn fablet
Comment 2
2019-12-16 05:25:29 PST
Created
attachment 385754
[details]
Patch
Chris Dumez
Comment 3
2019-12-16 08:09:36 PST
Comment on
attachment 385754
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385754&action=review
> Source/WebKit/ChangeLog:8 > + Instead of starting the fetch task asycnhronously, start it synchronously but make sure that
typo: asycnhronously
> Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp:179 > // Signal load failure for them
Missing period at the end.
Chris Dumez
Comment 4
2019-12-16 08:16:04 PST
Committed
r253554
: <
https://trac.webkit.org/changeset/253554
>
Radar WebKit Bug Importer
Comment 5
2019-12-16 08:17:24 PST
<
rdar://problem/57969320
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug