Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerToContextConnection.cpp
@@ -169,20 +169,16 @@ void WebSWServerToContextConnection::unregisterFetch(ServiceWorkerFetchTask& tas
 
 void WebSWServerToContextConnection::fetchTaskTimedOut(ServiceWorkerIdentifier serviceWorkerIdentifier)
 {
-    // Gather all fetches in this service worker
+    // Gather all fetches in this service worker.
     Vector<ServiceWorkerFetchTask*> fetches;
     for (auto& fetchTask : m_ongoingFetches.values()) {
         if (fetchTask->serviceWorkerIdentifier() == serviceWorkerIdentifier)
             fetches.append(fetchTask.get());
     }
 
-    // Signal load failure for them
-    for (auto* fetchTask : fetches) {
-        if (fetchTask->wasHandled())
-            fetchTask->fail({ errorDomainWebKitInternal, 0, { }, "Service Worker context closed"_s });
-        else
-            fetchTask->didNotHandle();
-    }
+    // Signal load failure for them.
+    for (auto* fetchTask : fetches)
+        fetchTask->contextClosed();
 
     if (m_server) {
         if (auto* worker = m_server->workerByID(serviceWorkerIdentifier)) {
